fix(navbar): layout z-index priority

--- a/html/public/css/navbar.css
+++ b/html/public/css/navbar.css
@@ -7,6 +7,7 @@ a {
     box-shadow: 0px 0px 10px rgba(0, 0, 0,0.2);
     position: fixed;
     width: 100%;
+    z-index: 1;
 }
 .navbar-title {
     height: 40px;
